package: another plugin to fix 100vh on safari

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,5 +11,15 @@
   body {
     font-family: Proxima Nova Reg, Questrial, SF Pro Display, SF Pro Icons,
       Helvetica Neue, Helvetica, Arial, sans-serif;
+
+      height: 100vh;
+  }
+}
+
+/* Avoid Chrome to see Safari hack */
+@supports (-webkit-touch-callout: none) {
+  body {
+    /* The hack for Safari */
+    height: -webkit-fill-available;
   }
 }
